Add more slides

--- a/03-installation.html
+++ b/03-installation.html
@@ -36,10 +36,23 @@
             <a href="https://docs.expo.io/versions/v32.0.0/introduction/why-not-expo/" class="info" target="_blank">Inconvénients Expo</a>
         </footer>
     </section>
-    
+
     <section>
         <h3>Lifecycle</h3>
         <img src="/assets/images/lifecycle-workflows.png" alt="Lifecycle">
+    </section>
+
+    <section>
+        <h3>Emulateur Android et simulateur iOS</h3>
+        <p>Il est également possible d'exécuter l'application directement sur l'ordinateur sans avoir besoin d'un smartphone.</p>
+        <p>Pour cela, il est possible d'utiliser</p>
+        <ul>
+            <li>Un <strong>émulateur</strong> Android qui permet de tester son application en prenant en compte la partie logicielle et hardware.</li>
+            <li>Un <strong>simulateur</strong> iOS qui permet de tester son application en prenant en compte <strong>uniquement</strong> la partie logicielle.</li>
+        </ul>
+        <footer>
+            <a href="#" class="info" style="font-size: 0.8em;">Il est nécéssaire d'utiliser un MAC pour faire tourner le simulateur iOS</a>
+        </footer>
     </section>
 
     <section>
