Update React Navigation imports

--- a/03-installation.html
+++ b/03-installation.html
@@ -72,7 +72,7 @@
 
     <section>
         <h3>Fichier .env</h3>
-        <p>Il est possible d'utiliser un fichier .env pour configurer les variable d'environnement :</p>
+        <p>Il est possible d'utiliser un fichier .env pour configurer les variables d'environnement :</p>
         <pre><code class="language-shell">npm install --save-dev babel-preset-expo babel-plugin-inline-dotenv</code></pre>
         <p>Modifier ensuite le fichier .babelrc situé à la racine du projet :</p>
         <pre><code class="language-js">{
