--- a/07-navigation.html
+++ b/07-navigation.html
@@ -28,7 +28,7 @@
     <section>
         <h3>Installation</h3>
         <p><a href="https://reactnavigation.org" target="_blank">React Navigation</a> est un composant permettant de gérer la navigation dans un application React Native.</p>
-        <pre><code class="language-shell">npm install --save react-navigation</code></pre>
+        <pre><code class="language-shell">npm install --save react-navigation react-native-gesture-handler react-native-reanimated react-native-screens</code></pre>
     </section>
 
     <section>
@@ -65,7 +65,7 @@
         <p>Ensuite, nous allons créer un fichier MainTabNavigation.js qui va contenir la navigation principale de notre application.</p>
         <pre><code class="language-shell">npm install react-navigation-stack react-navigation-tab</code></pre>
         <pre style="max-height: 300px;"><code class="language-jsx">import React from 'react';
-import {createAppContainer, createStackNavigator, createBottomTabNavigator} from "react-navigation";
+import {createAppContainer} from "react-navigation";
 import {createStackNavigator} from "react-navigation-stack";
 import {createBottomTabNavigator} from "react-navigation-tab";
 import HomeScreen from "../screens/HomeScreen";
